# Fractal_Visualizer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
.cache/clangd/index/: Mandelbrot.cpp.FC28017119CDEB11.idx  Mandelbrot.hpp.BF559B0B7216298B.idx  Shader.cpp.FE9143111BAEC58D.idx  Shader.hpp.1F0B8A2393892995.idx  glad.c.E4AA92859E5C0159.idx  glad.h.721739386D94FF93.idx  khrplatform.h.2CBC93212EB44C9F.idx  main.cpp.3EFBFFD54FB9970F.idx
include/: GUI.hpp  Mandelbrot.h  Mandelbrot.hpp  Shader.h
include/glad/: glad.h
shaders/: mandelbrot.frag  mandelbrot.vert
src/: GUI.cpp  Mandelbrot.cpp  Shader.cpp  glad.c  main.cpp
